Refactor MultilingualField and add equals/hashCode
Refactor `MultilingualField` to differentiate read and write operations. Added `equals` and `hashCode` methods to `MultilingualString` to ensure proper comparisons. Also updated project version to `0.0.70`.